🚀 Serverless refactor: No backend needed, user provides own Gemini API key
- Added extension/services/ (geminiService, leetcodeService, datasetService)
- Bundled problems.json locally in extension/data/
- Rewrote background.js as message hub with importScripts
- Replaced all fetch(API_BASE) calls with chrome.runtime.sendMessage
- Added API key settings modal (gear icon in header)
- Auto-prompts for key on first launch
- Updated manifest.json permissions (Gemini API, removed localhost)
- Rewrote README with 3-step setup guide

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -12,7 +12,7 @@
     ],
     "host_permissions": [
         "https://leetcode.com/*",
-        "http://localhost:3000/*"
+        "https://generativelanguage.googleapis.com/*"
     ],
     "action": {
         "default_title": "Open AI Coach Panel",
@@ -48,7 +48,8 @@
         {
             "resources": [
                 "lib/*",
-                "icons/*"
+                "icons/*",
+                "data/*"
             ],
             "matches": [
                 "https://leetcode.com/*"
